@@ -3,7 +3,6 @@ package com.coffee.americanote.coffee.domain.response;
 import com.coffee.americanote.coffee.domain.entity.Coffee;
 import com.coffee.americanote.coffee.domain.entity.CoffeeFlavour;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record CoffeeResponse(
         String name,
@@ -16,7 +15,7 @@ public record CoffeeResponse(
         this(
                 coffee.getName(),
                 flavours.stream().map(CoffeeFlavourResponse::new)
-                                .collect(Collectors.toList()),
+                                .toList(),
                 coffee.getIntensity().getLabel(),
                 coffee.getAcidity().getLabel(),
                 coffee.getPrice()
